# pln-search

./: API.md  Makefile  README.md  pyproject.toml
docs/: OAUTH_FINDINGS.md
docs/plans/: 2025-11-11-pln-search-cli-design.md
src/pln_search/: __init__.py  api.py  auth.py  cli.py  config.py  formatters.py  models.py
tests/: test_api.py  test_cli.py  test_formatters.py  test_models.py
