[project]
name = "pln-search"
version = "0.1.0"
description = "CLI tool for searching the PLN directory API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Danny O'Brien", email = "danny@spesh.com"}
]
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
pln-search = "pln_search.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-mock>=3.15.1",
    "requests-mock>=1.12.1",
]
